--- a/package.json
+++ b/package.json
@@ -26,25 +26,31 @@
     ]
   },
   "dependencies": {
+    "@tailwindcss/ui": "^0.6.0",
+    "autoprefixer": "^9.8.6",
     "next": "latest",
+    "postcss-import": "^12.0.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-query": "^2.15.4",
+    "tailwindcss": "^1.8.5",
+    "zustand": "^3.1.1"
   },
   "devDependencies": {
-    "@testing-library/react": "^10.0.1",
-    "@types/jest": "^25.1.4",
+    "@testing-library/react": "^11.0.2",
+    "@types/jest": "^26.0.13",
     "@types/node": "^13.9.5",
     "@types/react": "^16.9.27",
     "@types/testing-library__react": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
-    "babel-jest": "^25.2.3",
-    "eslint": "^6.8.0",
+    "babel-jest": "^26.3.0",
+    "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-react": "^7.19.0",
     "husky": "^4.2.3",
-    "jest": "^25.2.3",
-    "jest-watch-typeahead": "^0.5.0",
+    "jest": "^26.4.2",
+    "jest-watch-typeahead": "^0.6.1",
     "lint-staged": "^10.0.10",
     "prettier": "^2.0.2",
     "typescript": "^3.8.3"
