--- a/package.json
+++ b/package.json
@@ -26,13 +26,19 @@
     ]
   },
   "dependencies": {
+    "@nivo/line": "^0.62.0",
     "@tailwindcss/ui": "^0.6.0",
+    "@tailwindui/react": "^0.1.1",
+    "@types/classnames": "^2.2.10",
     "autoprefixer": "^9.8.6",
+    "classnames": "^2.2.6",
     "next": "latest",
+    "papaparse": "^5.3.0",
     "postcss-import": "^12.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-query": "^2.15.4",
+    "react-query-devtools": "^2.4.7",
     "tailwindcss": "^1.8.5",
     "zustand": "^3.1.1"
   },
@@ -40,6 +46,7 @@
     "@testing-library/react": "^11.0.2",
     "@types/jest": "^26.0.13",
     "@types/node": "^13.9.5",
+    "@types/papaparse": "^5.2.2",
     "@types/react": "^16.9.27",
     "@types/testing-library__react": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
